--- a/composer.json
+++ b/composer.json
@@ -36,13 +36,13 @@
         }
     ],
     "scripts": {
-        "test:lint": "./vendor/bin/pint",
-        "test:type": "./vendor/bin/phpstan",
-        "test:unit": "./vendor/bin/phpunit",
+        "test:lint": "./vendor/bin/pint --repair",
+        "test:type": "./vendor/bin/phpstan analyse",
+        "test:unit": "./vendor/bin/phpunit --colors",
         "tests": [
-            "@test:lint",
-            "@test:type",
-            "@test:unit"
+            "@test:lint --parallel",
+            "@test:type --no-progress",
+            "@test:unit --no-progress"
         ]
     },
     "minimum-stability": "dev",
