--- a/composer.json
+++ b/composer.json
@@ -39,11 +39,12 @@
         }
     ],
     "scripts": {
-        "test:lint": "./vendor/bin/pint",
+        "lint": "./vendor/bin/pint --repair",
+        "test:lint": "./vendor/bin/pint --test",
         "test:type": "./vendor/bin/phpstan analyse",
         "test:unit": "./vendor/bin/phpunit --colors",
         "tests": [
-            "@test:lint --repair --parallel",
+            "@test:lint --test --parallel",
             "@test:type --no-progress",
             "@test:unit --no-progress"
         ]
